Fix wrapping in connections menu

--- a/css/header.css
+++ b/css/header.css
@@ -109,6 +109,7 @@
 	line-height: 24px;
 	padding: 0;
 	clear: both;
+	white-space: nowrap;
 }
 
 .header-connections.scroll .header-connection {
